[tool.poetry]
name = "tdp-server"
version = "0.1.0"
description = ""
authors = ["SteBaum <stephan.baum@edu.dsti.institute>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
uvicorn = "^0.24.0.post1"
fastapi = "^0.104.1"
pydantic = "^2.5.1"
sqlalchemy = "^2.0.23"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
