[tool.poetry]
name = "tdp-server"
version = "0.1.0"
description = ""
authors = ["Guillaume Boutry <diode-boutry.consultant@dgfip.finances.gouv.fr>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
tdp-lib = { git = "https://github.com/TOSIT-IO/tdp-lib" }
fastapi = "0.104.1"
uvicorn = "0.24.0.post1"
fastapi-pagination = "^0.12.14"
pytest = "^7.4.4"
httpx = "^0.26.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
